Updated the gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,8 @@
 *~
-<<<<<<< HEAD
-incomplete/
 a.out
 *.o
 to implement
-=======
 incomplete/
-a.out
-*.o
 *.pyc
 ust.cpkl
-to implement
->>>>>>> IDEA
+hello.py
